k8s/cluster-apps/slskd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: slskd
  name: slskd
  namespace: slskd
spec:
  ingressClassName: traefik
  rules:
    - host: slskd.k8s.javydekoning.com
      http:
        paths:
          - backend:
              service:
                name: slskd
                port:
                  number: 5030
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - slskd.k8s.javydekoning.com
